ADDED: dependency for postgresql, properties and new execution script using a springboot goal

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,33 @@
 # Profile that is active. Maven wrapper reads this line. Do not remove
-spring.profiles.active=test
+# Can be test, prod and env
+spring.profiles.active=dev
 
 # Fallback profile (set if a certain profile is not active)
 spring.profiles.default=prod
+
+# Logging level of log4j
+# logging.level.org.springframework=INFO
+
+
+## Setting up connection to psql DB ##
+# Add DB type (psql)
+spring.datasource.platform=postgresql
+db.driver=org.postgresql.Driver
+db.platform=postgresql
+# Set connection to the desired table of DB using URL
+db.url=jdbc:postgresql://127.0.0.1:5432/eChempad
+# Database credentials
+db.username=amarine
+db.password=chemistry
+# Policy with database contents when booting: "validate" checks consistency, "create" wipes colliding tables and creates
+# them from scratch
+db.hibernate.hbm2ddl.auto=validate
+
+# Common DataSource fields
+hibernate.hbm2ddl.auto:validate
+hibernate.show_sql:true
+hibernate.dialect:org.hibernate.dialect.PostgreSQLDialect
+entitymanager.packagesToScan:org.iochembd.create.content
 
 
 
