--- a/pom.xml
+++ b/pom.xml
@@ -2,12 +2,14 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
+
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
 		<version>2.5.4</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
+
 	<groupId>org.ICIQ</groupId>
 	<artifactId>eChempad</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
@@ -16,33 +18,45 @@
 	<description>Experimental Chemistry Electronic Pad</description>
 	<properties>
 		<java.version>1.8</java.version>
+		<maven.compiler.source>${java.version}</maven.compiler.source>
+		<maven.compiler.target>${java.version}</maven.compiler.target>
 	</properties>
 	<dependencies>
+		<!--Added with the project initialization, it is for using web page tools in the project-->
 		<dependency>
-			<!--Added with the project initialization, it is for using web page tools in the project-->
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
 
-		<dependency>
-			<!--Added with the project initialization-->
+		<!--Added with the project initialization, it is for tomcat integration. It seems that is
+		not used now-->
+		<!--<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-tomcat</artifactId>
 			<scope>provided</scope>
-		</dependency>
+		</dependency> -->
+
+		<!--Added with the project initialization, it seems a core part of spring boot-->
 		<dependency>
-			<!--Added with the project initialization-->
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+
+
+
+		<!--To import the @ Entity annotation and allow persistency of the memory DB in a relational DB-->
 		<dependency>
-			<!--To import the @ Entity annotation-->
 			<groupId>org.hibernate.javax.persistence</groupId>
 			<artifactId>hibernate-jpa-2.1-api</artifactId>
 			<version>1.0.0.Final</version>
 		</dependency>
 	</dependencies>
+
+
+
+
+	<!--Builds and plug ins-->
 
 	<build>
 		<plugins>
