--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,33 +1,48 @@
 # Profile that is active. Maven wrapper reads this line. Do not remove
 # Can be test, prod and env
-spring.profiles.active=dev
+spring.profiles.active = dev
 
+
+####################
+### DEFAULT OPTS ###
+####################
 # Fallback profile (set if a certain profile is not active)
-spring.profiles.default=prod
+spring.profiles.default = prod
 
 # Logging level of log4j
-# logging.level.org.springframework=INFO
+logging.level.org.springframework = INFO
 
 
-## Setting up connection to psql DB ##
+#########################################
+### Setting up connection to psql DB ####
+#########################################
+
 # Add DB type (psql)
-spring.datasource.platform=postgresql
-db.driver=org.postgresql.Driver
-db.platform=postgresql
+spring.datasource.platform = postgresql
+db.driver = org.postgresql.Driver
+db.platform = postgresql
+
 # Set connection to the desired table of DB using URL
-db.url=jdbc:postgresql://127.0.0.1:5432/eChempad
+spring.datasource.url = jdbc:postgresql://127.0.0.1:5432/eChempad
+
 # Database credentials
-db.username=amarine
-db.password=chemistry
-# Policy with database contents when booting: "validate" checks consistency, "create" wipes colliding tables and creates
-# them from scratch
-db.hibernate.hbm2ddl.auto=validate
+spring.datasource.username = amarine
+spring.datasource.password = chemistry
+
+# To log the SQl queries (?)
+# spring.jpa.show-sql = true
+
+# Default policy with database contents when booting: "validate" checks consistency, "create" wipes colliding tables and creates
+# them from scratch, "create-drop" creates DB schema and then drops the information. Update updates the information.
+spring.jpa.hibernate.ddl-auto = validate
+
+# Selects the SQL dialect used to generate appropiate statements for postgreSQL
+hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
 
 # Common DataSource fields
-hibernate.hbm2ddl.auto:validate
-hibernate.show_sql:true
-hibernate.dialect:org.hibernate.dialect.PostgreSQLDialect
-entitymanager.packagesToScan:org.iochembd.create.content
+# Packages scanned to search for Entities (?)
+# Apparently not needed since all of our annotated packages are under the main package
+# entitymanager.packagesToScan = org.ICIQ.eChempad.models
 
 
 
