UPDATED: psql DB transparent schema with hibernate

--- a/.gitignore
+++ b/.gitignore
@@ -13,7 +13,6 @@
 
 # Dependency directories (remove the comment below to include it)
 # vendor/
-
 HELP.md
 target/
 !**/src/main/**/target/
@@ -75,3 +74,5 @@ build/
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
 
+# .mvn wrapper
+.mvn
