--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,6 +12,9 @@ spring.profiles.default = prod
 # Logging level of log4j
 logging.level.org.springframework = INFO
 
+# To remove a warning about open session in view, which is considered an anti-pattern
+# https://stackoverflow.com/questions/30549489/what-is-this-spring-jpa-open-in-view-true-property-in-spring-boot
+spring.jpa.open-in-view=false
 
 #########################################
 ### Setting up connection to psql DB ####
@@ -19,8 +22,7 @@ logging.level.org.springframework = INFO
 
 # Add DB type (psql)
 spring.datasource.platform = postgresql
-db.driver = org.postgresql.Driver
-db.platform = postgresql
+spring.datasource.driver-class-name = org.postgresql.Driver
 
 # Set connection to the desired table of DB using URL
 spring.datasource.url = jdbc:postgresql://127.0.0.1:5432/eChempad
@@ -29,8 +31,10 @@ spring.datasource.url = jdbc:postgresql://127.0.0.1:5432/eChempad
 spring.datasource.username = amarine
 spring.datasource.password = chemistry
 
-# To log the SQl queries (?)
+# To log the SQl queries
 # spring.jpa.show-sql = true
+
+#
 
 # Default policy with database contents when booting: "validate" checks consistency, "create" wipes colliding tables and creates
 # them from scratch, "create-drop" creates DB schema and then drops the information. Update updates the information.
