ADDED: Signals-API-Scratcher, more changes to automatize database creation

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -8,3 +8,6 @@ spring.jpa.hibernate.ddl-auto = create
 
 # Logging level for the relational database
 logging.level.org.hibernate.SQL = DEBUG
+
+# To log the SQl queries
+spring.jpa.show-sql = true
