--- a/src/main/resources/application-test.properties
+++ b/src/main/resources/application-test.properties
@@ -1,10 +1,14 @@
 #debug=true
 
 # https://stackoverflow.com/questions/2536829/hibernate-show-real-sql
-# Equivalent to hibernate.show_sql=true
-log4j.logger.org.hibernate.SQL=DEBUG
-# This prints the bounded parameters among other things
-log4j.logger.org.hibernate.type=TRACE
+# Equivalent to hibernate.show_sql = true
+log4j.logger.org.hibernate.SQL = DEBUG
 
 # Logging level for the relational database
 logging.level.org.hibernate.SQL = DEBUG
+
+# This prints the bounded parameters among other things
+log4j.logger.org.hibernate.type = TRACE
+
+# To log the SQl queries
+spring.jpa.show-sql = false
