--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,20 +1,26 @@
-# Profile that is active. Maven wrapper reads this line. Do not remove
+#####################################
+### APPLICATION PROFILE SELECTION ###
+#####################################
+
+# Profile that is active.
+# ** Maven wrapper reads this line. Do not remove. Change only the value **
 # Can be test, prod and env
 spring.profiles.active = dev
 
+# Fallback profile (set if a certain profile is not active)
+spring.profiles.default = prod
 
 ####################
 ### DEFAULT OPTS ###
 ####################
-# Fallback profile (set if a certain profile is not active)
-spring.profiles.default = prod
 
 # Logging level of log4j
 logging.level.org.springframework = INFO
 
-# To remove a warning about open session in view, which is considered an anti-pattern
+# To remove a warning about open session in view, which is considered an anti-pattern. It can cause performance problems
+# when active in some projects, but when is inactive we need to handle the LazyInitializationException by ourselves.
 # https://stackoverflow.com/questions/30549489/what-is-this-spring-jpa-open-in-view-true-property-in-spring-boot
-spring.jpa.open-in-view=false
+spring.jpa.open-in-view=true
 
 #########################################
 ### Setting up connection to psql DB ####
@@ -32,9 +38,7 @@ spring.datasource.username = amarine
 spring.datasource.password = chemistry
 
 # To log the SQl queries
-# spring.jpa.show-sql = true
-
-#
+spring.jpa.show-sql = false
 
 # Default policy with database contents when booting: "validate" checks consistency, "create" wipes colliding tables and creates
 # them from scratch, "create-drop" creates DB schema and then drops the information. Update updates the information.
@@ -46,7 +50,7 @@ hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
 # Common DataSource fields
 # Packages scanned to search for Entities (?)
 # Apparently not needed since all of our annotated packages are under the main package
-# entitymanager.packagesToScan = org.ICIQ.eChempad.models
+# entitymanager.packagesToScan = org.ICIQ.eChempad.entities
 
 
 
