--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,10 +1,10 @@
 # Policy with database contents when booting: "validate" checks consistency, "create" wipes colliding tables and creates
 # them from scratch
-db.hibernate.hbm2ddl.auto = create
+db.hibernate.hbm2ddl.auto = create-drop
 
 # Default policy with database contents when booting: "validate" checks consistency, "create" wipes colliding tables and creates
 # them from scratch, "create-drop" creates DB schema and then drops the information. Update updates the information.
-spring.jpa.hibernate.ddl-auto = create
+spring.jpa.hibernate.ddl-auto = create-drop
 
 # Logging level for the relational database
 logging.level.org.hibernate.SQL = DEBUG
