CHANGED: Name of user entity to Researcher because it was giving trouble because probably in mysql there is already a table called users

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,13 +1,14 @@
 # Policy with database contents when booting: "validate" checks consistency, "create" wipes colliding tables and creates
 # them from scratch
-db.hibernate.hbm2ddl.auto = create-drop
+db.hibernate.hbm2ddl.auto = update
 
 # Default policy with database contents when booting: "validate" checks consistency, "create" wipes colliding tables and creates
 # them from scratch, "create-drop" creates DB schema and then drops the information. Update updates the information.
-spring.jpa.hibernate.ddl-auto = create-drop
+spring.jpa.hibernate.ddl-auto = update
 
 # Logging level for the relational database
 logging.level.org.hibernate.SQL = DEBUG
+logging.level.org.hibernate.type = TRACE
 
 # To log the SQl queries
 spring.jpa.show-sql = true
