--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -44,7 +44,7 @@ spring.jpa.show-sql = false
 # them from scratch, "create-drop" creates DB schema and then drops the information. Update updates the information.
 spring.jpa.hibernate.ddl-auto = validate
 
-# Selects the SQL dialect used to generate appropiate statements for postgreSQL
+# Selects the SQL dialect used to generate apropiate statements for postgreSQL
 hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
 
 # Common DataSource fields
