--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,14 +1,14 @@
-# Policy with database contents when booting: "validate" checks consistency, "create" wipes colliding tables and creates
-# them from scratch
-db.hibernate.hbm2ddl.auto = update
+# Default policy with database contents when booting: "validate" checks consistency, "create" wipes colliding tables
+# and creates them from scratch, "create-drop" creates DB schema and then drops the information. "Update" updates the
+# information and the schema. I do not know the difference between these two but they seem equivalent.
+spring.jpa.hibernate.ddl-auto = create
+db.hibernate.hbm2ddl.auto = create
 
-# Default policy with database contents when booting: "validate" checks consistency, "create" wipes colliding tables and creates
-# them from scratch, "create-drop" creates DB schema and then drops the information. Update updates the information.
-spring.jpa.hibernate.ddl-auto = update
-
-# Logging level for the relational database
+# Logging level for the relational database [TRACE, DEBUG, INFO]
 logging.level.org.hibernate.SQL = DEBUG
-logging.level.org.hibernate.type = TRACE
+logging.level.org.hibernate.type = INFO
+log4j.logger.org.hibernate.SQL = DEBUG
+logging.level.org.springframework = INFO
 
 # To log the SQl queries
 spring.jpa.show-sql = true
