--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,2 +1,14 @@
+# Default policy with database contents when booting: "validate" checks consistency, "create" wipes colliding tables
+# and creates them from scratch, "create-drop" creates DB schema and then drops the information. "Update" updates the
+# information and the schema. I do not know the difference between these two but they seem equivalent.
+spring.jpa.hibernate.ddl-auto = validate
+db.hibernate.hbm2ddl.auto = validate
+
+# Logging level for the relational database [TRACE, DEBUG, INFO]
+logging.level.org.hibernate.SQL = INFO
+logging.level.org.hibernate.type = INFO
+log4j.logger.org.hibernate.SQL = INFO
+logging.level.org.springframework = INFO
+
 # To log the SQl queries
 spring.jpa.show-sql = false
