--- a/src/main/resources/application-test.properties
+++ b/src/main/resources/application-test.properties
@@ -1,14 +1,14 @@
-#debug=true
+# Default policy with database contents when booting: "validate" checks consistency, "create" wipes colliding tables
+# and creates them from scratch, "create-drop" creates DB schema and then drops the information. "Update" updates the
+# information and the schema. I do not know the difference between these two but they seem equivalent.
+spring.jpa.hibernate.ddl-auto = create
+db.hibernate.hbm2ddl.auto = create
 
-# https://stackoverflow.com/questions/2536829/hibernate-show-real-sql
-# Equivalent to hibernate.show_sql = true
-log4j.logger.org.hibernate.SQL = DEBUG
-
-# Logging level for the relational database
-logging.level.org.hibernate.SQL = DEBUG
-
-# This prints the bounded parameters among other things
-log4j.logger.org.hibernate.type = TRACE
+# Logging level for the relational database [TRACE, DEBUG, INFO]
+logging.level.org.hibernate.SQL = TRACE
+logging.level.org.hibernate.type = TRACE
+log4j.logger.org.hibernate.SQL = TRACE
+logging.level.org.springframework = TRACE
 
 # To log the SQl queries
-spring.jpa.show-sql = false
+spring.jpa.show-sql = true
