--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,7 @@
 #####################################
 
 # Profile that is active.
-# ** Maven wrapper reads this line. Do not remove. Change only the value **
+# ** Maven wrapper reads this following line. Do not remove or change format. Change only the value **
 # Can be test, prod and env
 spring.profiles.active = dev
 
@@ -14,13 +14,10 @@ spring.profiles.default = prod
 ### DEFAULT OPTS ###
 ####################
 
-# Logging level of log4j
-logging.level.org.springframework = INFO
-
 # To remove a warning about open session in view, which is considered an anti-pattern. It can cause performance problems
 # when active in some projects, but when is inactive we need to handle the LazyInitializationException by ourselves.
 # https://stackoverflow.com/questions/30549489/what-is-this-spring-jpa-open-in-view-true-property-in-spring-boot
-spring.jpa.open-in-view=true
+spring.jpa.open-in-view = true
 
 #########################################
 ### Setting up connection to psql DB ####
@@ -44,8 +41,16 @@ spring.jpa.show-sql = false
 # them from scratch, "create-drop" creates DB schema and then drops the information. Update updates the information.
 spring.jpa.hibernate.ddl-auto = validate
 
-# Selects the SQL dialect used to generate apropiate statements for postgreSQL
+# Selects the SQL dialect used to generate appropriate statements for postgreSQL
 hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
+
+# To autoconfigure the currentSessionContext
+spring.jpa.properties.hibernate.current_session_context_class = thread
+hibernate.current_session_context_class = thread
+
+# Maximum number of simultaneous connections to the DB
+# https://stackoverflow.com/questions/9802684/hibernate-config-connection-pool-size
+hibernate.connection.pool_size = 10
 
 # Common DataSource fields
 # Packages scanned to search for Entities (?)
