UPDATED: Update achieved on entity Researcher

--- a/pom.xml
+++ b/pom.xml
@@ -16,10 +16,12 @@
 	<packaging>war</packaging>
 	<name>eChempad</name>
 	<description>Experimental Chemistry Electronic Pad</description>
+	<!-- internal variable definition for compilation -->
 	<properties>
 		<java.version>1.8</java.version>
 		<maven.compiler.source>${java.version}</maven.compiler.source>
 		<maven.compiler.target>${java.version}</maven.compiler.target>
+		<org.mapstruct.version>1.4.2.Final</org.mapstruct.version>
 	</properties>
 
 
@@ -44,6 +46,7 @@
 				</exclusion>
 			</exclusions>
 		</dependency>
+
 		<dependency>
 			<groupId>javax.validation</groupId>
 			<artifactId>validation-api</artifactId>
@@ -75,13 +78,6 @@
 			<version>1.0.0.Final</version>
 		</dependency>
 
-		<!--To import hibernate, which is used to achieve transparent persistence to a Database-->
-		<dependency>
-			<groupId>org.hibernate</groupId>
-			<artifactId>hibernate-core</artifactId>
-			<version>5.4.20.Final</version>
-		</dependency>
-
 		<!--To use postgresql in spring-->
 		<dependency>
 			<groupId>org.postgresql</groupId>
@@ -89,8 +85,25 @@
 			<scope>runtime</scope>
 		</dependency>
 
+        <dependency>
+            <groupId>org.xmlunit</groupId>
+            <artifactId>xmlunit-core</artifactId>
+        </dependency>
+
+		<!--To import hibernate, which is used to achieve transparent persistence to a Database-->
+		<dependency>
+			<groupId>org.hibernate</groupId>
+			<artifactId>hibernate-core</artifactId>
+			<version>5.4.32.Final</version>
+		</dependency>
 
 
+		<!--To perform transparent updates against a generic entity -->
+		<dependency>
+			<groupId>org.mapstruct</groupId>
+			<artifactId>mapstruct</artifactId>
+			<version>${org.mapstruct.version}</version>
+		</dependency>
 
 		<!--Added with the project initialization, it is for tomcat integration. It seems that is
 not used now-->
@@ -112,6 +125,32 @@ not used now-->
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
+
+			<!-- define compiler directive for maven in order to create components (beans) for the generic mappers -->
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<configuration>
+					<!-- For mapper to bean generation -->
+					<source>1.8</source>
+					<target>1.8</target>
+					<annotationProcessorPaths>
+						<path>
+							<groupId>org.mapstruct</groupId>
+							<artifactId>mapstruct-processor</artifactId>
+							<version>${org.mapstruct.version}</version>
+						</path>
+					</annotationProcessorPaths>
+
+					<compilerArgs>
+						<compilerArg>
+							-Amapstruct.defaultComponentModel=spring
+						</compilerArg>
+					</compilerArgs>
+
+				</configuration>
+			</plugin>
+
 		</plugins>
 	</build>
 
