ADDED: Exception control with custom exceptions, using @ControllerAdvice annotation. Deleted old and unused properties in application.properties and related files.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -24,7 +24,7 @@ spring.jpa.open-in-view = true
 #########################################
 
 # Add DB type (psql)
-spring.datasource.platform = postgresql
+spring.sql.init.platform = postgresql
 spring.datasource.driver-class-name = org.postgresql.Driver
 
 # Set connection to the desired table of DB using URL
@@ -42,15 +42,15 @@ spring.jpa.show-sql = false
 spring.jpa.hibernate.ddl-auto = validate
 
 # Selects the SQL dialect used to generate appropriate statements for postgreSQL
-hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
+# hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
 
 # To autoconfigure the currentSessionContext
 spring.jpa.properties.hibernate.current_session_context_class = thread
-hibernate.current_session_context_class = thread
+# hibernate.current_session_context_class = thread
 
 # Maximum number of simultaneous connections to the DB
 # https://stackoverflow.com/questions/9802684/hibernate-config-connection-pool-size
-hibernate.connection.pool_size = 10
+# hibernate.connection.pool_size = 10
 
 # Common DataSource fields
 # Packages scanned to search for Entities (?)
