--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,7 +1,7 @@
 # Default policy with database contents when booting: "validate" checks consistency, "create" wipes colliding tables
 # and creates them from scratch, "create-drop" creates DB schema and then drops the information. "Update" updates the
 # information and the schema. I do not know the difference between these two but they seem equivalent.
-spring.jpa.hibernate.ddl-auto = create
+spring.jpa.hibernate.ddl-auto = create-drop
 
 # Logging level for the relational database [TRACE, DEBUG, INFO]
 logging.level.org.hibernate.SQL = DEBUG
