--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,7 +4,7 @@
 
 # Profile that is active.
 # ** Maven wrapper reads this following line. Do not remove or change format. Change only the value **
-# Can be test, prod and env
+# Can be test, prod and dev
 spring.profiles.active = dev
 
 # Fallback profile (set if a certain profile is not active)
