--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -48,6 +48,9 @@ spring.jpa.hibernate.ddl-auto = validate
 spring.jpa.properties.hibernate.current_session_context_class = thread
 # hibernate.current_session_context_class = thread
 
+# https://www.baeldung.com/spring-boot-change-port
+server.port=8081
+
 # Maximum number of simultaneous connections to the DB
 # https://stackoverflow.com/questions/9802684/hibernate-config-connection-pool-size
 # hibernate.connection.pool_size = 10
