--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -7,6 +7,7 @@ spring.jpa.hibernate.ddl-auto = create-drop
 logging.level.org.hibernate.SQL = DEBUG
 logging.level.org.hibernate.type = INFO
 logging.level.org.springframework = INFO
+org.hibernate.event.internal.DefaultPersistEventListener = TRACE
 
 # To log the SQl queries
 spring.jpa.show-sql = true
