--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -11,3 +11,7 @@ org.hibernate.event.internal.DefaultPersistEventListener = TRACE
 
 # To log the SQl queries
 spring.jpa.show-sql = true
+
+# To define a default user that can access our web application
+spring.security.user.name = amarine\
+spring.security.user.password =  
