--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -13,5 +13,9 @@ org.hibernate.event.internal.DefaultPersistEventListener = TRACE
 spring.jpa.show-sql = true
 
 # To define a default user that can access our web application
-spring.security.user.name = amarine\
-spring.security.user.password =  
+spring.security.user.name = amarine
+spring.security.user.password = chemistry
+
+# Enable Cross-site request forgery
+security.enable.csrf = false
+
