--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -10,3 +10,6 @@ logging.level.org.springframework = INFO
 
 # To log the SQl queries
 spring.jpa.show-sql = false
+
+# Enable Cross-site request forgery protection
+security.enable.csrf = true
