ADDED: Spring security, does not allow to access anything. Authnetication not working

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -61,4 +61,20 @@ server.port=8081
 # entitymanager.packagesToScan = org.ICIQ.eChempad.entities
 
 
+################
+### Security ###
+################
 
+# spring.ldap.* = ...                    # LDAP integration properties
+# spring.security.oauth2.* = ...         # OAuth2 and JWT parameters
+# spring.session.* = ...                 # Configs for the HTTP sessionl, with optional SQL persistence
+
+# Default user
+spring.security.user.name = "eChempad"
+# Default password
+spring.security.user.password = "chemistry"
+# User roles
+spring.security.user.roles = "ALL"
+
+# Enable Cross-site request forgery
+security.enable.csrf = false
