ADDED: Basic authentication, but the overridden user it is not being set up correctly. It is set to eChempad but transforms to amarine, which is the user of the database, set in another property that has no relation with it...

--- a/src/main/resources/META-INF/additional-spring-configuration-metadata.json
+++ b/src/main/resources/META-INF/additional-spring-configuration-metadata.json
@@ -4,5 +4,11 @@
       "name": "security.enable.csrf",
       "type": "java.lang.String",
       "description": "Description for security.enable.csrf."
+    },
+    {
+      "name": "spring.security.user.name",
+      "type": "java.lang.String",
+      "description": "Value of the default user name of eChempad (//RF it transforms magically to amarine)."
     }
+
   ] }
