--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -69,12 +69,13 @@ server.port=8081
 # spring.security.oauth2.* = ...         # OAuth2 and JWT parameters
 # spring.session.* = ...                 # Configs for the HTTP sessionl, with optional SQL persistence
 
-# Default user
-spring.security.user.name = "eChempad"
+# Default user It does not work I do not why (it appears as "amarine" in the code side)
+spring.security.user.name=eChempad
 # Default password
-spring.security.user.password = "chemistry"
+spring.security.user.password=chemistry
 # User roles
-spring.security.user.roles = "ALL"
+spring.security.user.roles = "USER", "ADMIN"
 
 # Enable Cross-site request forgery
 security.enable.csrf = false
+
