ADDED: Element permission DB access, more HTTP security configuration. Not making the authentication yet

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -38,8 +38,9 @@ spring.datasource.password = chemistry
 spring.jpa.show-sql = false
 
 # Default policy with database contents when booting: "validate" checks consistency, "create" wipes colliding tables and creates
-# them from scratch, "create-drop" creates DB schema and then drops the information. Update updates the information.
-spring.jpa.hibernate.ddl-auto = validate
+# them from scratch, "create-drop" creates DB schema and then drops the information. "Update" updates the information.
+# "None does nothing"
+spring.jpa.hibernate.ddl-auto = create
 
 # Selects the SQL dialect used to generate appropriate statements for postgreSQL
 # hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
@@ -74,7 +75,7 @@ spring.security.user.name=eChempad
 # Default password
 spring.security.user.password=chemistry
 # User roles
-spring.security.user.roles = "USER", "ADMIN"
+spring.security.user.roles = "USER"
 
 # Enable Cross-site request forgery
 security.enable.csrf = false
