--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -40,7 +40,7 @@ spring.jpa.show-sql = false
 # Default policy with database contents when booting: "validate" checks consistency, "create" wipes colliding tables and creates
 # them from scratch, "create-drop" creates DB schema and then drops the information. "Update" updates the information.
 # "None does nothing"
-spring.jpa.hibernate.ddl-auto = create
+spring.jpa.hibernate.ddl-auto = validate
 
 # Selects the SQL dialect used to generate appropriate statements for postgreSQL
 # hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
