UPDATED: Element permissions, reduced complexity of the http authentication and security for basic authentication

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,7 +5,7 @@
 # Profile that is active.
 # ** Maven wrapper reads this following line. Do not remove or change format. Change only the value **
 # Can be test, prod and dev
-spring.profiles.active = test
+spring.profiles.active = dev
 
 # Fallback profile (set if a certain profile is not active)
 spring.profiles.default = prod
@@ -40,7 +40,7 @@ spring.jpa.show-sql = false
 # Default policy with database contents when booting: "validate" checks consistency, "create" wipes colliding tables and creates
 # them from scratch, "create-drop" creates DB schema and then drops the information. "Update" updates the information.
 # "None does nothing"
-spring.jpa.hibernate.ddl-auto = create
+spring.jpa.hibernate.ddl-auto = update
 
 # Selects the SQL dialect used to generate appropriate statements for postgreSQL
 # hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
