UPDATED: Journal addition into the user workspace

--- a/src/main/resources/META-INF/additional-spring-configuration-metadata.json
+++ b/src/main/resources/META-INF/additional-spring-configuration-metadata.json
@@ -1,14 +1,18 @@
 {
   "properties": [
     {
-      "name": "security.enable.csrf",
-      "type": "java.lang.String",
-      "description": "Description for security.enable.csrf."
+      "name": "spring.security.user.name",
+      "type": "java.lang.Boolean",
+      "description": "Value of the default user name of eChempad (//RF it transforms magically to amarine)."
     },
     {
-      "name": "spring.security.user.name",
+      "name": "security.disable.cors",
       "type": "java.lang.String",
-      "description": "Value of the default user name of eChempad (//RF it transforms magically to amarine)."
+      "description": "Description for security.disable.cors."
+    },
+    {
+      "name": "security.disable.csrf",
+      "type": "java.lang.String",
+      "description": "Description for security.disable.csrf."
     }
-
   ] }
