--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -77,6 +77,9 @@ spring.security.user.password=chemistry
 # User roles
 spring.security.user.roles = "USER"
 
-# Enable Cross-site request forgery
-security.enable.csrf = false
+# Disable Cross-site request forgery protection
+security.disable.csrf = true
+
+# Disable Cross-origin resource sharing protection
+security.disable.cors = true
 
