--- a/pom.xml
+++ b/pom.xml
@@ -126,9 +126,13 @@
 			<artifactId>junit</artifactId>
 			<scope>test</scope>
 		</dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-test</artifactId>
+        </dependency>
 
 
-	</dependencies>
+    </dependencies>
 
 
 
