--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,3 +1,11 @@
+#
+# |===================================================================================|
+# | Copyright (C) 2021 - 2022 ICIQ <contact@iochem-bd.org>                            |
+# |                                                                                   |
+# | This software is the property of ICIQ.                                            |
+# |===================================================================================|
+#
+
 # Default policy with database contents when booting: "validate" checks consistency, "create" wipes colliding tables
 # and creates them from scratch, "create-drop" creates DB schema and then drops the information. "Update" updates the
 # information and the schema. I do not know the difference between these two but they seem equivalent.
