--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -108,3 +108,8 @@ spring.servlet.multipart.max-request-size=215MB
 # All files uploaded through the REST API will be stored in this directory
 file.upload-dir=/home/amarine/Desktop/eChempad/file_db
 
+
+####################
+### REST Service ###
+####################
+signals.baseURL=https://iciq.signalsnotebook.perkinelmercloud.eu/api/rest/v1.0
