--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -20,5 +20,13 @@ org.hibernate.event.internal.DefaultPersistEventListener = TRACE
 # To log the SQl queries
 spring.jpa.show-sql = true
 
+###############################
+### REST of signals Service ###
+###############################
+# Used to store keys (testing / development only)
+signals.APIKeys.path=/eChempad/APIKeys
+signals.APIKeys.filename=key
+
+
 
 
