--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -106,10 +106,10 @@ spring.servlet.multipart.max-request-size=215MB
 
 ## File Storage Properties
 # All files uploaded through the REST API will be stored in this directory
-file.upload-dir=/home/amarine/Desktop/eChempad/file_db
+file.upload-dir=/eChempad/file_db
 
 
-####################
-### REST Service ###
-####################
+###############################
+### REST of signals Service ###
+###############################
 signals.baseURL=https://iciq.signalsnotebook.perkinelmercloud.eu/api/rest/v1.0
