UPDATED: configurationi of rest against signals, not working because of trustanchors for unknown reasons. testing keystore, which seems to work

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,7 +13,7 @@
 # Profile that is active.
 # ** Maven wrapper reads this following line. Do not remove or change format. Change only the value **
 # Can be test, prod and dev
-spring.profiles.active = dev
+spring.profiles.active = test
 
 # Fallback profile (set if a certain profile is not active)
 spring.profiles.default = prod
@@ -113,3 +113,7 @@ file.upload-dir=/eChempad/file_db
 ### REST of signals Service ###
 ###############################
 signals.baseURL=https://iciq.signalsnotebook.perkinelmercloud.eu/api/rest/v1.0
+
+# Used to store keys (testing / development only)
+signals.APIKeys.path=/eChempad/APIKeys
+signals.APIKeys.filename=key
