UPDATED: Extracting metadata from signals with formatting and also connected the element permission printing in JSON format to start the process of deleting the circular reference, which causes stack overflow when rpinting a element with a permission

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -106,7 +106,7 @@ spring.servlet.multipart.max-request-size=215MB
 
 ## File Storage Properties
 # All files uploaded through the REST API will be stored in this directory
-file.upload-dir=/eChempad/file_db
+file.upload-dir=./file_db
 
 
 ###############################
@@ -114,6 +114,13 @@ file.upload-dir=/eChempad/file_db
 ###############################
 signals.baseURL=https://iciq.signalsnotebook.perkinelmercloud.eu/api/rest/v1.0
 
-# Used to store keys (testing / development only)
+# Used to store keys (testing / development only). Notice that for extra safety are outside the repository
 signals.APIKeys.path=/eChempad/APIKeys
 signals.APIKeys.filename=key
+
+####################################
+### Serialization and Data types ###
+####################################
+# This property is advice to be set to false if the program has an error when trying to serialize empty beans (?)
+# https://stackoverflow.com/questions/15261456/how-do-i-disable-fail-on-empty-beans-in-jackson
+spring.jackson.serialization.FAIL_ON_EMPTY_BEANS=false
