UPDATED: Authentication broken...

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -76,12 +76,12 @@ server.port=8081
 
 # spring.ldap.* = ...                    # LDAP integration properties
 # spring.security.oauth2.* = ...         # OAuth2 and JWT parameters
-# spring.session.* = ...                 # Configs for the HTTP sessionl, with optional SQL persistence
+# spring.session.* = ...                 # Configs for the HTTP session, with optional SQL persistence
 
-# Default user It does not work I do not why (it appears as "amarine" in the code side)
+# Default user It does not work I do not why
 spring.security.user.name=eChempad
 # Default password
-spring.security.user.password=chemistry
+spring.security.user.password=password
 # User roles
 spring.security.user.roles = "USER"
 
